# CudaRs

./: .gitignore  AGENTS.md  Cargo.toml  FFI_CONTRACT.md  OPENVINO_SETUP.md  OPTIMIZATION_SUMMARY.md  README.md  package-lock.json  run_fluent_demo.ps1
.cursor/plans/: csharp-sdk-integration-plan.md  openvino_paddlepaddle_integration_e01d887c.plan.md  openvino能力集成计划_3f0aa3f7.plan.md
.github/workflows/: ci.yml
build-support/cuda-build/: Cargo.toml
build-support/cuda-build/src/: lib.rs
cuda-rs/cublas/: Cargo.toml
cuda-rs/cublas/src/: lib.rs
cuda-rs/cuda-driver/: Cargo.toml
cuda-rs/cuda-driver/src/: lib.rs
cuda-rs/cuda-runtime/: Cargo.toml
cuda-rs/cuda-runtime/src/: lib.rs
cuda-rs/cudnn/: Cargo.toml
cuda-rs/cudnn/src/: lib.rs
cuda-rs/cufft/: Cargo.toml
cuda-rs/cufft/src/: lib.rs
cuda-rs/cupti/: Cargo.toml
cuda-rs/cupti/src/: lib.rs
cuda-rs/curand/: Cargo.toml
cuda-rs/curand/src/: lib.rs
cuda-rs/cusolver/: Cargo.toml
cuda-rs/cusolver/src/: lib.rs
cuda-rs/cusparse/: Cargo.toml
cuda-rs/cusparse/src/: lib.rs
cuda-rs/npp/: Cargo.toml
cuda-rs/npp/src/: lib.rs
cuda-rs/nvjpeg/: Cargo.toml
cuda-rs/nvjpeg/src/: lib.rs
cuda-rs/nvml/: Cargo.toml
cuda-rs/nvml/src/: lib.rs
cuda-rs/nvrtc/: Cargo.toml
cuda-rs/nvrtc/src/: lib.rs
cuda-sys/cublas-sys/: Cargo.toml  build.rs
cuda-sys/cublas-sys/src/: lib.rs
cuda-sys/cuda-driver-sys/: Cargo.toml  build.rs
cuda-sys/cuda-driver-sys/src/: lib.rs
cuda-sys/cuda-runtime-sys/: Cargo.toml  build.rs
cuda-sys/cuda-runtime-sys/src/: lib.rs
cuda-sys/cudnn-sys/: Cargo.toml  build.rs
cuda-sys/cudnn-sys/src/: lib.rs
cuda-sys/cufft-sys/: Cargo.toml  build.rs
cuda-sys/cufft-sys/src/: lib.rs
cuda-sys/cupti-sys/: Cargo.toml  build.rs
cuda-sys/cupti-sys/src/: lib.rs
cuda-sys/curand-sys/: Cargo.toml  build.rs
cuda-sys/curand-sys/src/: lib.rs
cuda-sys/cusolver-sys/: Cargo.toml  build.rs
cuda-sys/cusolver-sys/src/: lib.rs
cuda-sys/cusparse-sys/: Cargo.toml  build.rs
cuda-sys/cusparse-sys/src/: lib.rs
cuda-sys/npp-sys/: Cargo.toml  build.rs
cuda-sys/npp-sys/src/: lib.rs
cuda-sys/nvjpeg-sys/: Cargo.toml  build.rs
cuda-sys/nvjpeg-sys/src/: lib.rs
cuda-sys/nvml-sys/: Cargo.toml  build.rs
cuda-sys/nvml-sys/src/: lib.rs
cuda-sys/nvrtc-sys/: Cargo.toml  build.rs
cuda-sys/nvrtc-sys/src/: lib.rs
cudars-core/: Cargo.toml
cudars-core/src/: lib.rs  model_info.rs  model_kind.rs  model_manager.rs  model_spec.rs  model_trait.rs  pipeline_info.rs  pipeline_kind.rs  pipeline_spec.rs  pipeline_trait.rs  result.rs  sdk_err.rs
cudars-ffi/: Cargo.toml  build.rs
cudars-ffi/examples/: paddle_to_openvino.rs
cudars-ffi/src/: blas.rs  dnn.rs  driver.rs  fft.rs  image_decode.rs  lib.rs  management.rs  memory_pool.rs  onnx_runtime.rs  onnx_runtime_stub.rs  openvino.rs  paddleocr.rs  paddleocr_wrapper.cpp  preprocess.rs  preprocess_gpu.rs  rand_api.rs  rtc.rs  runtime.rs  solver.rs  sparse.rs  tensorrt.rs  tensorrt_stub_api.rs  tensorrt_stubs.rs  tensorrt_wrapper.cpp  torchscript.rs  trtexec.rs
cudars-ffi/src/sdk/: mod.rs  model_instance.rs  model_manager_state.rs  openvino_config_utils.rs  openvino_model_config.rs  openvino_ocr_model_config.rs  openvino_ocr_pipeline.rs  openvino_output.rs  openvino_pipeline_config.rs  openvino_tensor_pipeline.rs  paddleocr_model_config.rs  paddleocr_output.rs  paddleocr_pipeline.rs  paddleocr_pipeline_config.rs  pipeline_instance.rs  sdk_abi.rs  sdk_converter.rs  sdk_error.rs  sdk_error_detail.rs  sdk_handles.rs  sdk_model_manager.rs  sdk_model_spec.rs  sdk_pipeline.rs  sdk_pipeline_spec.rs  sdk_strings.rs  sdk_yolo_preprocess_meta.rs  yolo_cpu_pipeline.rs  yolo_gpu_pipeline.rs  yolo_model_config.rs  yolo_openvino_pipeline.rs  yolo_output_buffer.rs  yolo_pipeline_config.rs  yolo_preprocess_cpu.rs
docs/: PADDLE_OPENVINO_GUIDE.md  PADDLE_QUICKSTART.md  PADDLE_TESTING_GUIDE.md
dotnet/: CudaRS.sln
dotnet/CudaRS/: ChannelBuilder.cs  ChannelInput.cs  ChannelOptions.cs  Cuda.cs  CudaRS.csproj  DeviceBuffer.cs  ExecutionOptions.cs  GpuMemoryConfig.cs  InferencePipeline.cs  ModelBuilder.cs  ModelHub.cs  ModelKind.cs  ModelOptions.cs  ModelRuntime.cs  PipelineBuilder.cs  PipelineDefinition.cs  PipelineInput.cs  PipelineKind.cs  PipelineOptions.cs  PipelineRun.cs  PipelineTypes.cs  RunResult.cs  TensorRtExec.cs
dotnet/CudaRS.Core/: CudaException.cs  CudaRS.Core.csproj  Handles.cs  LibraryHandles.cs  MemoryPool.cs  ModelHandle.cs  ModelManagerHandle.cs  OnnxRuntimeSession.cs  PipelineHandle.cs  SdkCheck.cs  SdkException.cs  ThreadAffinity.cs  Utf8Buffer.cs
dotnet/CudaRS.Examples/: BenchmarkHelpers.cs  Config.cs  CudaRS.Examples.csproj  ErrorHandlingExample.cs  FEATURES.md  Models.cs  PathHelpers.cs  Program.cs
dotnet/CudaRS.Examples/Tests/: Case10BasicProfilingTest.cs  Case11LayerProfilingTest.cs  Case12Int8Test.cs  Case13IntegrationTest.cs  Case1InputInfoTest.cs  (+8 more)
dotnet/CudaRS.Native/: CudaRS.Native.csproj  CudaRsNative.Resolver.cs  CudaRsNative.cs  CudaRsResult.cs  OpenVinoNative.cs  OpenVinoNativeTypes.cs  SdkErr.cs  SdkErrorDetail.cs  SdkModelKind.cs  SdkModelSpec.cs  SdkNative.cs  SdkOcrLine.cs  SdkPipelineKind.cs  SdkPipelineSpec.cs  SdkYoloPreprocessMeta.cs
dotnet/CudaRS.Yolo/: AnchorDecoder.cs  AnnotatedImageResult.cs  BackendResult.cs  BoundingBox.cs  BoxFormat.cs  Classification.cs  CudaRS.Yolo.csproj  CudaRsFluent.cs  Detection.cs  DetectionTypes.cs  FluentResultWrapper.cs  GeometryTypes.cs  GpuYoloThroughputPipeline.cs  ImageAnnotator.cs  InferenceBackend.cs  InferenceDevice.cs  InferenceResult.cs  Keypoint.cs  KeypointType.cs  ModelInferenceResult.cs  MultiModelInferenceResult.cs  Nms.cs  NmsSummary.cs  ObbDetection.cs  OnnxRuntimeBackend.cs  OpenVinoBackend.cs  OutputLayout.cs  OutputParser.cs  ParsedOutput.cs  Point2D.cs  Pose.cs  PoseDetection.cs  RotatedBox.cs  SegmentationDetection.cs  SegmentationMask.cs  Skeleton.cs  TensorOutput.cs  TensorRtBackend.cs  TorchScriptBackend.cs  YoloBatchPreprocessResult.cs  (+34 more)
scripts/: convert_paddle_models.ps1  onnx_to_openvino_ir.py  paddle2onnx_converter.py  pir_to_onnx_direct.py  pir_to_pdmodel.py
(+31 files in other folders)
