[package]
name = "cublas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for cuBLAS"

[features]
default = ["cuda-12"]
cuda-11 = ["cublas-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["cublas-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["cublas-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
cublas-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
