[package]
name = "cuda-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for CUDA Driver API"

[features]
default = ["cuda-12"]
cuda-11 = ["cuda-driver-sys/cuda-11"]
cuda-12 = ["cuda-driver-sys/cuda-12"]
cuda-12-3 = ["cuda-driver-sys/cuda-12-3"]
stub = ["cuda-driver-sys/stub"]

[dependencies]
cuda-driver-sys.workspace = true
thiserror.workspace = true
