[package]
name = "cudnn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for cuDNN"

[features]
default = ["cuda-12"]
cuda-11 = ["cudnn-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["cudnn-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["cudnn-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
cudnn-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
