[package]
name = "curand"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for cuRAND"

[features]
default = ["cuda-12"]
cuda-11 = ["curand-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["curand-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["curand-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
curand-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
