[package]
name = "cusolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for cuSOLVER"

[features]
default = ["cuda-12"]
cuda-11 = ["cusolver-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["cusolver-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["cusolver-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
cusolver-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
