[package]
name = "npp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for NPP"

[features]
default = ["cuda-12"]
cuda-11 = ["npp-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["npp-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["npp-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
npp-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
libc.workspace = true
