[package]
name = "nvjpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for nvJPEG"

[features]
default = ["cuda-12"]
cuda-11 = ["nvjpeg-sys/cuda-11", "cuda-runtime/cuda-11"]
cuda-12 = ["nvjpeg-sys/cuda-12", "cuda-runtime/cuda-12"]
cuda-12-3 = ["nvjpeg-sys/cuda-12-3", "cuda-runtime/cuda-12-3"]

[dependencies]
nvjpeg-sys.workspace = true
cuda-runtime-sys.workspace = true
cuda-runtime = { path = "../cuda-runtime" }
thiserror.workspace = true
